--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -23,8 +23,11 @@
             android:defaultValue="48"
             android:persistent="false" />
 
-        <PreferenceScreen
+        <ListPreference
             android:fragment="com.android.settings.rascarlo.NavBarLongPressActions"
-            android:key="navbar_custom_actions"
-            android:title="@string/navbar_long_press_title" />
+            android:key="recent_long_press"
+            android:defaultValue="1"
+            android:title="@string/recent_long_press_title"
+            android:entries="@array/recent_long_press_entries"
+            android:entryValues="@array/recent_long_press_values" />
 </PreferenceScreen>
