--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -64,6 +64,7 @@
     <!-- Status bar | Clock -->
     <string name="status_bar_clock">Clock and date</string>
     <string name="status_bar_clock_title">Clock and date style</string>
+    <string name="status_bar_clock_summary">Change clock and date style</string>
     <string name="clock_title_enable">Alignment</string>
     <string name="clock_enabled">Enabled</string>
     <string name="clock_disabled">Disabled</string>
@@ -172,6 +173,7 @@
     <string name="navigation_bar_title">Navigation bar</string>
     <!-- Navigation Bar buttons -->
     <string name="navigation_bar_buttons_layout_title">Buttons and layout</string>
+    <string name="navigation_bar_summary">Change and add buttons</string>
     <string name="navigation_bar_help_text">1 - To begin editing, tap the lock icon\n\n2 - Tap any button to assign or change functionality\n\n3 - Long press any button to rearrange the order\n\n4 - To save, tap the lock icon again\n\n5 - To restore system default, tap the reset button\n\n</string>
     <string name="navigation_bar_tips">\u2022 Actions can only be assigned to one button at a time\n\n\u2022 The home button cannot be re-assigned\n\n\u2022 Side buttons cannot be rearranged</string>
     <string name="navigation_bar_tips_title">Quick tips</string>
@@ -259,6 +261,7 @@
 
     <!-- Network traffic -->
     <string name="network_traffic_title">Network traffic</string>
+    <string name="network_traffic_summary">enable network traffic in statusbar</string>
     <string name="show_network_traffic_state">Status bar traffic monitor</string>
     <string name="show_network_traffic_unit">Display unit</string>
     <string name="show_network_traffic_frequency">Update interval</string>
