--- a/res/xml/navigation_bar_settings.xml
+++ b/res/xml/navigation_bar_settings.xml
@@ -7,7 +7,8 @@
         <PreferenceScreen
             android:fragment="com.android.settings.rascarlo.NavBar"
             android:key="navigation_bar_buttons_layout"
-            android:title="@string/navigation_bar_buttons_layout_title" />
+            android:title="@string/navigation_bar_buttons_layout_title" 
+            android:summary="@string/navigation_bar_summary" />
 
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="navbar_button_tint"
