Settings: Add heads up blacklist options. (2/2)

--- a/res/xml/lichti_tweaks.xml
+++ b/res/xml/lichti_tweaks.xml
@@ -32,11 +32,11 @@
                             android:dependency="notification_peek" />
             </PreferenceScreen>
 
-            <PreferenceScreen
-                    android:key="heads_up"
-                    android:fragment="com.android.settings.headsup.HeadsUpDoNotDisturbSettings"
+            <com.android.settings.rascarlo.SystemSettingSwitchPreference
+                    android:key="heads_up_enabled"
+                    android:fragment="com.android.settings.headsup.HeadsUpSettings"
                     android:title="@string/category_heads_up" 
-                    android:summary="@string/heads_up_summary" />
+                    android:summary="@string/summary_heads_up" />
     </PreferenceCategory>
 
     <!-- Appcircle Sidebar -->
