--- a/res/xml/heads_up_settings.xml
+++ b/res/xml/heads_up_settings.xml
@@ -16,18 +16,24 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-            android:title="@string/category_heads_up">
+            android:title="@string/heads_up_dnd_title"
+            android:key="dnd_applications_list">
 
-        <CheckBoxPreference
-                android:key="heads_up_enabled"
-                android:title="@string/title_heads_up_enabled"
-                android:defaultValue="false" />
-
+        <Preference
+            android:key="add_dnd_packages"
+            android:icon="@drawable/ic_menu_add"
+            android:title="@string/add_heads_up_package"
+            android:summary="@string/add_heads_up_dnd_summary"/>
     </PreferenceCategory>
 
     <PreferenceCategory
-            android:key="applications_list"
-            android:title="@string/heads_up_dnd_title" >
+            android:title="@string/heads_up_blacklist_title"
+            android:key="blacklist_applications">
+        <Preference
+            android:key="add_blacklist_packages"
+            android:icon="@drawable/ic_menu_add"
+            android:title="@string/add_heads_up_package"
+            android:summary="@string/add_heads_up_blacklist_summary"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
