--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -407,6 +407,7 @@
     <string name="add_heads_up_blacklist_summary">Don\'t show heads up from these applications</string>
     <string name="heads_up_blacklist_title">Blacklist</string>
     <string name="profile_choose_app">Choose app</string>
+    <string name="heads_up_disabled_notice">To allow applications to display interactive notifications in a pop-up window on your screen, enable Heads up.</string>
 
     <!-- Sizes for pattern lockscreen -->
     <string name="lock_pattern_size_3">3x3</string>
