--- a/res/xml/heads_up_settings.xml
+++ b/res/xml/heads_up_settings.xml
@@ -21,7 +21,7 @@
 
         <Preference
             android:key="add_dnd_packages"
-            android:icon="@drawable/ic_menu_add"
+            android:icon="@drawable/ic_menu_add_dark"
             android:title="@string/add_heads_up_package"
             android:summary="@string/add_heads_up_dnd_summary"/>
     </PreferenceCategory>
@@ -31,7 +31,7 @@
             android:key="blacklist_applications">
         <Preference
             android:key="add_blacklist_packages"
-            android:icon="@drawable/ic_menu_add"
+            android:icon="@drawable/ic_menu_add_dark"
             android:title="@string/add_heads_up_package"
             android:summary="@string/add_heads_up_blacklist_summary"/>
     </PreferenceCategory>
