--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -399,8 +399,8 @@
     <!-- Heads Up -->
     <string name="category_heads_up">Heads up</string>
     <string name="heads_up_summary">Heads up settings</string>
-    <string name="summary_heads_up">Pop-up notifications</string>
-    <string name="title_heads_up_enabled">Enable heads up</string>
+    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
+    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
     <string name="heads_up_dnd_title">Do not disturb</string>
     <string name="add_heads_up_package">Add app</string>
     <string name="add_heads_up_dnd_summary">Don\'t show heads up in these applications</string>
