--- a/res/xml/lichti_tweaks.xml
+++ b/res/xml/lichti_tweaks.xml
@@ -32,11 +32,10 @@
                             android:dependency="notification_peek" />
             </PreferenceScreen>
 
-            <com.android.settings.rascarlo.SystemSettingSwitchPreference
+            <Preference
                     android:key="heads_up_enabled"
                     android:fragment="com.android.settings.headsup.HeadsUpSettings"
-                    android:title="@string/category_heads_up" 
-                    android:summary="@string/summary_heads_up" />
+                    android:title="@string/category_heads_up" />
     </PreferenceCategory>
 
     <!-- Appcircle Sidebar -->
