--- a/res/values/ras_strings.xml
+++ b/res/values/ras_strings.xml
@@ -411,6 +411,8 @@
     <string name="heads_up_summary">Heads up Settings</string>
     <string name="heads_up_expanded_title">Always expanded</string>
     <string name="heads_up_expanded_summary">Show heads up notification always expanded</string>
+    <string name="heads_up_gravity_title">Show at the bottom</string>
+    <string name="heads_up_gravity_summary">Show heads up notification at the bottom of the screen</string>
     <string name="heads_up_show_updates_title">Show updates</string>
     <string name="heads_up_show_updates_summary">Show updates from pending background notifications as heads up</string>
     <string name="heads_up_snooze_title">Snooze timer</string>
